yaml/odf-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: odf
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: odf
  template:
    metadata:
      labels:
        app: odf
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/openshift-gitops/odf
        name: odf
        ports:
        - containerPort: 8080
