yaml/odf-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: odf
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: odf
