yaml/odf-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: odf
spec:
  to:
    kind: Service
    name: odf
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
